gap correction in wizard styling

--- a/hl_learning_objs/static/sass/cms-styling.scss
+++ b/hl_learning_objs/static/sass/cms-styling.scss
@@ -78,7 +78,10 @@ $crumb-addtl-vert: 2em; // accounts for padding/margins in calculations
 $gutter: 1em;
 
 #learning_obj_creation{
-    height:100%;
+    // height:100%;
+    //  for some reason this div has a vertical gap before it, 
+    //  shrink to alleviate
+    height:98%;
 
     #editor-crumb{
         height: $crumb-height;
